fixed project layout issue

--- a/source/stylesheets/sections/_projects.sass
+++ b/source/stylesheets/sections/_projects.sass
@@ -5,6 +5,7 @@
 
   .projects-list
     @extend .flexbox
+    flex-direction: column
 
     .project
       position: relative
